--- a/package.json
+++ b/package.json
@@ -10,14 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/button": "^2.0.27",
+    "@nextui-org/card": "^2.0.24",
+    "@nextui-org/image": "^2.0.24",
+    "@nextui-org/progress": "^2.0.25",
+    "@nextui-org/system": "^2.0.15",
+    "@nextui-org/tabs": "^2.0.26",
+    "@nextui-org/theme": "^2.1.18",
+    "canvas-confetti": "^1.9.2",
     "clsx": "^2.1.0",
     "color": "^4.2.3",
     "framer-motion": "^11.0.8",
+    "lucide-react": "^0.350.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^18.7.10",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
