--- a/.prettierrc
+++ b/.prettierrc
@@ -25,7 +25,7 @@
         "s?css$"
     ],
     "plugins": [
-        "prettier-plugin-tailwindcss",
-        "@trivago/prettier-plugin-sort-imports"
+        "@trivago/prettier-plugin-sort-imports",
+        "prettier-plugin-tailwindcss"
     ]
 }
