--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@nextui-org/button": "^2.0.27",
     "@nextui-org/card": "^2.0.24",
     "@nextui-org/image": "^2.0.24",
-    "@nextui-org/progress": "^2.0.25",
+    "@nextui-org/slider": "^2.2.6",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/tabs": "^2.0.26",
     "@nextui-org/theme": "^2.1.18",
     "canvas-confetti": "^1.9.2",
     "clsx": "^2.1.0",
     "color": "^4.2.3",
+    "dayjs": "^1.11.10",
     "framer-motion": "^11.0.8",
+    "jotai": "^2.7.1",
     "lucide-react": "^0.350.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/canvas-confetti": "^1.6.4",
+    "@types/color": "^3.0.6",
     "@types/node": "^18.7.10",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
