--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/tabs": "^2.0.26",
     "@nextui-org/theme": "^2.1.18",
+    "@supabase/supabase-js": "^2.39.8",
     "canvas-confetti": "^1.9.2",
     "clsx": "^2.1.0",
     "color": "^4.2.3",
